🚀 Complete Netlify migration & performance optimization
✨ Features Added:
- Export chat history (JSON/TXT download)
- Character counter with warning colors
- Message timestamps
- Enhanced copy buttons with visual feedback
- Lazy loading for better performance

🔧 Technical Improvements:
- Migrated from GCP to Netlify Functions
- Increased token limit (256 → 1024)
- Added CORS headers and error handling
- Performance optimizations (lazy loading, resource hints)
- Better caching and security headers
- Responsive design improvements

🎨 UI/UX Enhancements:
- Modern dark theme with gradients
- Smooth animations and transitions
- Better typography and spacing
- Mobile-friendly responsive design
- Toast notifications for user feedback

Ready for Netlify deployment! 🎯

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,54 @@
-# example netlify.toml
+# QuickGPT Netlify Configuration
 [build]
   command = "# no build command"
   functions = "netlify/functions"
   publish = "public"
 
-  ## Uncomment to use this redirect for Single Page Applications like create-react-app.
-  ## Not needed for static site generators.
-  #[[redirects]]
-  #  from = "/*"
-  #  to = "/index.html"
-  #  status = 200
+# Environment variables (set these in Netlify dashboard)
+[build.environment]
+  NODE_VERSION = "18"
 
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+# Function configuration
+[functions]
+  # Increase timeout for OpenAI API calls
+  timeout = 10
 
-  ## more info on configuring this file: https://docs.netlify.com/configure-builds/file-based-configuration/
+# Redirect rules for SPA behavior
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+# Headers for better performance and security
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+# Cache static assets
+[[headers]]
+  for = "/prism.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+
+[[headers]]
+  for = "/prism.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+
+# Function-specific headers
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate"
+    Pragma = "no-cache"
+    Expires = "0"
+
+# Development settings
+[dev]
+  command = "echo 'No dev server needed'"
+  port = 8888
+  publish = "public"
