🔧 Fix netlify.toml configuration syntax error
- Remove invalid timeout configuration
- Use default 10s timeout for functions
- Fix deployment build error

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,8 +10,7 @@
 
 # Function configuration
 [functions]
-  # Increase timeout for OpenAI API calls
-  timeout = 10
+  # Functions will use default timeout (10s)
 
 # Redirect rules for SPA behavior
 [[redirects]]
